# NASA-JPL-Cognition

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
monte_carlo_simulation/: __init__.py  mission_reliability.py  radiation_environment.py  trajectory_uncertainty.py
nasa_enhanced_usecases/: __init__.py
nasa_enhanced_usecases/cryosphere_analysis/: __init__.py  ice_sheet_analysis.py
nasa_enhanced_usecases/prognostics/: __init__.py  battery_rul.py
nasa_enhanced_usecases/spectral_processing/: __init__.py  hyperspectral_analysis.py
science_data_processing/: __init__.py  asteroid_tracking.py  exoplanet_analysis.py  mars_surface_analysis.py
spacecraft_control_simulation/: __init__.py  attitude_control.py  orbital_mechanics.py  propulsion_model.py
tests/: test_enhanced_usecases.py  test_monte_carlo.py  test_science_data_processing.py  test_spacecraft_control.py
web/: index.html  package.json
web/src/: App.tsx  index.css  types.ts
web/src/data/: index.ts  monteCarlo.ts  scienceData.ts  spacecraftControl.ts
